# itfest2026

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml  untilIT.txt
campaia-engine/: Dockerfile  Dockerfile.dev  pyproject.toml
campaia-engine/app/: main.py
campaia-engine/app/api/: __init__.py  deps.py  router.py
campaia-engine/app/core/: __init__.py  config.py  database.py  security.py
campaia-engine/app/models/: __init__.py  audience_target.py  base.py  campaign.py  campaign_schedule.py  invoice.py  token_transaction.py  user.py  video_generation.py  wallet.py
campaia-engine/app/repositories/: __init__.py  campaign_repo.py
campaia-engine/app/schemas/: __init__.py  ai.py  auth.py  campaign.py  invoice.py  payment.py  profile.py  targeting.py  tiktok.py  user.py  video.py
campaia-engine/app/services/: __init__.py  auth_service.py  campaign_service.py  email_service.py  invoice_service.py  pdf_service.py  s3_service.py  stripe_service.py  targeting_service.py  video_service.py  wallet_service.py
campaia-engine/migrations/: env.py
campaia-engine/migrations/versions/: 001_create_users_table.py  0be2c248e356_add_token_transactions.py  190b97bca4a5_add_wallet_table.py  1c37d5254da6_update_schema.py  27d51559530c_add_invoices_table.py  95f4fd4ff52f_add_audience_targeting_model.py  a1b2c3d4e5f6_campaign_schedules.py  ae6521012c1e_add_lat_lng_and_city_to_campaign.py  b2c3d4e5f6a7_add_event_type.py  c3d4e5f6a7b8_campaign_stats_demo.py  d5896a814be5_add_video_generations_table.py  (+3 more)
campaia-engine/scripts/: seed_community_map_demo.py
(+105 files in other folders)
